# Qt-Plugin-Learning

./: CMakeLists.txt  README.md
HelloPlugin/: CMakeLists.txt  HelloPlugin.cmake  HelloPlugin.cpp  HelloPlugin.h
PluginInterface/: CMakeLists.txt  PluginInterface.cmake  PluginInterface.h
PluginSystem/: CMakeLists.txt  main.cpp
doc/: README.xmind
